--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -27,7 +27,7 @@ jobs:
         working-directory: ./stack/indexer/deb
         run: |
           sudo ./build_package.sh
-          sudo export PACKAGE_NAME=`ls | grep .deb`
+          sudo export PACKAGE_NAME=`ls ./output/ | grep .deb`
           sudo mv ./output/$PACKAGE_NAME ~/$PACKAGE_NAME
       - name: Run script to compare checksums
         run: sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh
