--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -24,10 +24,14 @@ jobs:
         with:
           ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
       - name: Build wazuh-indexer issue-branch package
-        working-directory: ./stack/indexer/deb
         run: |
-          sudo ./build_package.sh
-          echo "PACKAGE_NAME=$(ls ./output/ | grep .deb | head -n 1)" >> $GITHUB_ENV
-          sudo mv ./output/$PACKAGE_NAME ~/$PACKAGE_NAME
+          wget --load-cookies /tmp/cookies.txt "https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1\n/p')&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb" -O wazuh-indexer_4.5.0-1_amd64.deb && rm -rf /tmp/cookies.txt -O wazuh-indexer_4.5.0-1_amd64.deb
+          echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
+          sudo mv $PACKAGE_NAME ~/$PACKAGE_NAME
+        # working-directory: ./stack/indexer/deb
+        # run: |
+        #   sudo ./build_package.sh
+        #   echo "PACKAGE_NAME=$(ls ./output/ | grep .deb | head -n 1)" >> $GITHUB_ENV
+        #   sudo mv ./output/$PACKAGE_NAME ~/$PACKAGE_NAME
       - name: Run script to compare checksums
         run: sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh
