--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -25,7 +25,7 @@ jobs:
           ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
       - name: Build wazuh-indexer issue-branch package
         run: |
-          wget --load-cookies /tmp/cookies.txt "https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1\n/p')&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb" -O wazuh-indexer_4.5.0-1_amd64.deb && rm -rf /tmp/cookies.txt -O wazuh-indexer_4.5.0-1_amd64.deb
+          wget --load-cookies /tmp/cookies.txt "https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1\n/p')&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb" -O wazuh-indexer_4.5.0-1_amd64.deb && rm -rf /tmp/cookies.txt
           echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
           sudo mv $PACKAGE_NAME ~/$PACKAGE_NAME
         # working-directory: ./stack/indexer/deb
