--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Create enviroment variables
         run: cat .env > $GITHUB_ENV
       - name: Set env variable
-        env:
-          PACKAGE_NAME: echo $(ls | grep .deb | head -n 1)
+        run: echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
+      - name: Display env variable
         run: echo $PACKAGE_NAME
       - name: Move wazuh-indexer issue-branch package
         run: |
