--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -28,14 +28,10 @@ jobs:
       - name: Set env variable
         run: echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
       - name: Display env variable
-        run: echo $PACKAGE_NAME
+        run: |
+          echo $PACKAGE_NAME
+          export PACKAGE=$PACKAGE_NAME
       - name: Move wazuh-indexer issue-branch package
         run: sudo mv $PACKAGE_NAME ~/$PACKAGE_NAME
-
-        # working-directory: ./stack/indexer/deb
-        # run: |
-        #   sudo ./build_package.sh
-        #   echo "PACKAGE_NAME=$(ls ./output/ | grep .deb | head -n 1)" >> $GITHUB_ENV
-        #   sudo mv ./output/$PACKAGE_NAME ~/$PACKAGE_NAME
       - name: Run script to compare checksums
         run: sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh
