Exporting variable to use it in script v2

--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           echo $PACKAGE_NAME
           export PACKAGE=$PACKAGE_NAME
+          echo $PACKAGE
       - name: Move wazuh-indexer issue-branch package
         run: sudo mv $PACKAGE_NAME ~/$PACKAGE_NAME
       - name: Run script to compare checksums
