Trying env parameter in workflow

--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -33,3 +33,5 @@ jobs:
           echo $PACKAGE_NAME
       - name: Run script to compare checksums
         run: sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh
+        env:
+          PACKAGE_NAME: echo $PACKAGE_NAME
