--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -23,13 +23,22 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
-      - name: Download new package
+      - uses: actions/checkout@v3
+        with:
+          ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
+      - name: Build/Download wazuh-indexer issue-branch package and set env variable
+        working-directory: ./stack/indexer/deb
         run: |
           wget --load-cookies /tmp/cookies.txt "https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1\n/p')&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb" -O wazuh-indexer_4.5.0-1_amd64.deb && rm -rf /tmp/cookies.txt
-      - name: Set env variable
-        run: echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
-      - name: Display env variable
+          echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
+      - name: Display env variable and ls
         run: |
           echo $PACKAGE_NAME
+          echo $(ls)
+      - name: Move package to home
+        working-directory: ./stack/indexer/deb
+        run: |
+          sudo mv ./$PACKAGE_NAME ~/$PACKAGE_NAME
+          echo $(ls ~/)
       - name: Run script to compare checksums
         run: sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh $PACKAGE_NAME
