--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -26,11 +26,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
-      - name: Build wazuh-indexer issue-branch package and set env variable
+      - name: Build/Download wazuh-indexer issue-branch package and set env variable
         working-directory: ./stack/indexer/deb
         run: |
-          sudo ./build_package.sh
-          echo "PACKAGE_NAME=$(ls ./output | grep .deb | head -n 1)" >> $GITHUB_ENV
+          wget 'https://packages-dev.wazuh.com/staging/apt/pool/main/w/wazuh-indexer/wazuh-indexer_4.5.0-40500_amd64.deb'
+          echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
       - name: Display env variable and move new package
         working-directory: ./stack/indexer/deb
         run: |
