--- a/.github/workflows/test-indexer.yml
+++ b/.github/workflows/test-indexer.yml
@@ -8,7 +8,6 @@ on:
       - 'stack/indexer/deb/debian/postrm'
       - 'stack/indexer/deb/debian/postinst'
       - 'stack/indexer/deb/debian/preinst'
-      - '.github/workflows/test-indexer.yml'
   workflow_dispatch:
 
 jobs:
@@ -26,16 +25,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
-      - name: Build/Download wazuh-indexer issue-branch package and set env variable
+      - name: Build wazuh-indexer issue-branch package and set env variable
         working-directory: ./stack/indexer/deb
         run: |
-          wget 'https://packages-dev.wazuh.com/staging/apt/pool/main/w/wazuh-indexer/wazuh-indexer_4.5.0-40500_amd64.deb'
-          echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
+          sudo ./build_package.sh
+          echo "PACKAGE_NAME=$(ls ./output | grep .deb | head -n 1)" >> $GITHUB_ENV
       - name: Display env variable and move new package
         working-directory: ./stack/indexer/deb
         run: |
           echo $PACKAGE_NAME
-          sudo cp ./$PACKAGE_NAME $GITHUB_WORKSPACE/$PACKAGE_NAME
+          sudo cp ./output/$PACKAGE_NAME $GITHUB_WORKSPACE/$PACKAGE_NAME
       - name: Run script
         run: |
           sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh $PACKAGE_NAME
