--- a/.github/workflows/add-issues-to-projects.yml
+++ b/.github/workflows/add-issues-to-projects.yml
@@ -17,3 +17,9 @@ jobs:
           # to the issue
           project-url: https://github.com/orgs/wazuh/projects/3
           github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+      - uses: actions/add-to-project@v0.4.0
+        with:
+          # You can target a repository in a different organization
+          # to the issue
+          project-url: https://github.com/orgs/wazuh/projects/15
+          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
