--- a/.github/workflows/test-indexer-debian.yml
+++ b/.github/workflows/test-indexer-debian.yml
@@ -1,8 +1,8 @@
 name: Test Wazuh indexer on upgrade - Debian
 on:
-  #push:
-  #  branches:
-  #    - 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
+  push:
+    branches:
+      - 1850-wazuh-indexer-preserve-config-files-upon-upgrade-master
   pull_request:
     paths:
       - 'stack/indexer/deb/debian/postrm'
@@ -28,13 +28,12 @@ jobs:
       - name: Build wazuh-indexer issue-branch package and set env variable
         working-directory: ./stack/indexer/deb
         run: |
-          sudo ./build_package.sh
-          echo "PACKAGE_NAME=$(ls ./output | grep .deb | head -n 1)" >> $GITHUB_ENV
+          wget --load-cookies /tmp/cookies.txt "https://docs.google.com/uc?export=download&confirm=$(wget --quiet --save-cookies /tmp/cookies.txt --keep-session-cookies --no-check-certificate 'https://docs.google.com/uc?export=download&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb' -O- | sed -rn 's/.*confirm=([0-9A-Za-z_]+).*/\1\n/p')&id=12AgpaYEfEEuucCl-rKNClfHzkJ8fZFvb" -O wazuh-indexer_4.5.0-1_amd64.deb && rm -rf /tmp/cookies.txt
+          echo "PACKAGE_NAME=$(ls | grep .deb | head -n 1)" >> $GITHUB_ENV
       - name: Display env variable and move new package
         working-directory: ./stack/indexer/deb
         run: |
           echo $PACKAGE_NAME
-          sudo cp ./output/$PACKAGE_NAME $GITHUB_WORKSPACE/$PACKAGE_NAME
+          sudo cp ./$PACKAGE_NAME $GITHUB_WORKSPACE/$PACKAGE_NAME
       - name: Run script
-        run: |
-          sudo bash .github/actions/upgrade-indexer/upgrade-indexer-debian.sh $PACKAGE_NAME
+        run: sudo bash $GITHUB_WORKSPACE/.github/actions/upgrade-indexer/upgrade-indexer.sh $GITHUB_WORKSPACE/$PACKAGE_NAME
