--- a/documentation-templates/wazuh/config.yml
+++ b/documentation-templates/wazuh/config.yml
@@ -2,24 +2,24 @@ nodes:
   # Wazuh indexer nodes
   indexer:
     - name: indexer-1
-      ip: "<indexer-node-ip>"
+      ip: "<indexer-1-ip>"
     #- name: indexer-2
-    #  ip: "<indexer-node-ip>"
+    #  ip: "<indexer-2-ip>"
     #- name: indexer-3
-    #  ip: "<indexer-node-ip>"
+    #  ip: "<indexer-3-ip>"
 
   # Wazuh server nodes
   # If there is more than one Wazuh server
   # node, each one must have a node_type
   server:
     - name: server-1
-      ip: "<wazuh-manager-ip>"
+      ip: "<wazuh-server-1-ip>"
     #  node_type: master
     #- name: server-2
-    #  ip: "<wazuh-manager-ip>"
+    #  ip: "<wazuh-server-2-ip>"
     #  node_type: worker
     #- name: server-3
-    #  ip: "<wazuh-manager-ip>"
+    #  ip: "<wazuh-server-3-ip>"
     #  node_type: worker
 
   # Wazuh dashboard nodes
