--- a/.github/workflows/test-indexer-rpm.yml
+++ b/.github/workflows/test-indexer-rpm.yml
@@ -1,4 +1,4 @@
-name: Test Wazuh Indexer upon upgrade - RPM
+name: Test the preserving of security config files upon upgrade - Wazuh indexer - RPM
 on:
   pull_request:
     paths:
@@ -6,26 +6,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  Test-rpm-indexer-upgrade:
+  Test-security-config-files-preservation-RPM:
     runs-on: ubuntu-latest
     steps:
-      - name: Get the release version of Wazuh (all components)
-        run: echo "RELEASE_VERSION=$(jq -r 'map(select(.prerelease == false and .draft == false)) | .[] | .tag_name' <<< $(curl --silent https://api.github.com/repos/wazuh/wazuh/releases) | sed "s|v||g" | sort -rV | head -n 1)" >> $GITHUB_ENV
+      - name: Get the latest stable Wazuh version (all components)
+        run: echo "LATEST_STABLE_VERSION=$(jq -r 'map(select(.prerelease == false and .draft == false)) | .[] | .tag_name' <<< $(curl --silent https://api.github.com/repos/wazuh/wazuh/releases) | sed "s|v||g" | sort -rV | head -n 1)" >> $GITHUB_ENV
+
       - name: Get the major and minor of the release version
-        run: echo "MAJOR_MINOR=$(echo $RELEASE_VERSION | cut -d '.' -f1-2 | sed "s|\.||")" >> $GITHUB_ENV
+        run: echo "MAJOR_MINOR=$(echo $LATEST_STABLE_VERSION | cut -d '.' -f1-2 | sed "s|\.||")" >> $GITHUB_ENV
 
       - uses: actions/checkout@v3
-      - name: Build the Wazuh Indexer package and set enviroment variable
+      - name: Build the Wazuh indexer package and set environment variable
         working-directory: ./stack/indexer/rpm
         run: |
           sudo ./build_package.sh
           echo "PACKAGE_NAME=$(ls ./output | grep .rpm | head -n 1)" >> $GITHUB_ENV
 
-      - name: Display enviroment variable and move new package
+      - name: Move the built package
         working-directory: ./stack/indexer/rpm
         run: |
-          echo $PACKAGE_NAME
-          echo $WAZUH_VERSION
           mkdir $GITHUB_WORKSPACE/packages
           sudo cp ./output/$PACKAGE_NAME $GITHUB_WORKSPACE/packages/$PACKAGE_NAME
 
