Development of build.sh for puppet module

--- a/puppet_module/Docker/Dockerfile
+++ b/puppet_module/Docker/Dockerfile
@@ -1,6 +1,8 @@
 FROM centos:7
 
-RUN rpm -Uvh https://yum.puppet.com/puppet-tools-release-el-7.noarch.rpm && yum install pdk
+RUN rpm -Uvh https://yum.puppet.com/puppet-tools-release-el-7.noarch.rpm && yum install -y pdk
+
+RUN pdk set config user.analytics.disabled false --type boolean --force
 
 # Create the build directory and add file
 ADD build.sh /
