--- a/macos/package_files/com.wazuh.agent.plist
+++ b/macos/package_files/com.wazuh.agent.plist
@@ -10,5 +10,7 @@
     </array>
     <key>RunAtLoad</key>
     <true/>
+    <key>AssociatedBundleIdentifiers</key>
+    <string>com.wazuh.agent</string>
 </dict>
 </plist>
