Fix paths in workflows for github actions
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/test-enable-rhel9-agent.yml
+++ b/.github/workflows/test-enable-rhel9-agent.yml
@@ -2,7 +2,7 @@ name: Test the enabling of the Wazuh agent - Red Hat Enterprise Linux 9 - RPM
 on:
   pull_request:
     paths:
-      - 'rpms/SPECS'
+      - 'rpms/SPECS/*'
       - 'rpms/generate_rpm_package.sh'
       - 'rpms/build.sh'
   workflow_dispatch:
