Disable automatic cancel when one fails
Signed-off-by: Miguel Verdaguer Velázquez <verdx@riseup.net>

--- a/.github/workflows/create-rpm-packages.yml
+++ b/.github/workflows/create-rpm-packages.yml
@@ -22,6 +22,7 @@ jobs:
           - arch: ppc64le
             distro: alpine_latest
             type: manager
+      fail-fast: false
     steps:
       - uses: actions/checkout@v3
 
